--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
+    "firebase": "^8.6.8",
     "lodash": "^4.17.15",
     "vee-validate": "^3.4.10",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
+    "vue-cryptojs": "^2.1.5",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
