--- a/package.json
+++ b/package.json
@@ -7,20 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@auth0/auth0-spa-js": "^1.15.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.26",
-    "@fortawesome/free-regular-svg-icons": "^5.12.0",
-    "@fortawesome/free-solid-svg-icons": "^5.12.0",
-    "@fortawesome/vue-fontawesome": "^0.1.9",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
-    "firebase": "^8.6.8",
-    "lodash": "^4.17.15",
-    "vee-validate": "^3.4.10",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
-    "vue-cryptojs": "^2.1.5",
+    "vue-material-design-icons": "^4.13.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
